Fixed layout problem

--- a/css/article.css
+++ b/css/article.css
@@ -52,6 +52,8 @@
   text-align: center;
   display: block;
   margin: -40px auto 100px;
+  max-width: 1100px;
+  width: 100%;
 }
 
 #main .marginTop {
@@ -86,6 +88,9 @@ iframe {
   #main .title {
     font-size: 2.2rem;
     margin-bottom: 60px;
+  }
+  #main .small {
+    width: 90%;
   }
 }
 
@@ -146,6 +151,7 @@ iframe {
   }
   #main .small {
     font-size: 1.1rem;
+    margin-bottom: 40px;
   }
   #main .marginTop {
     margin-top: -40px;
@@ -156,7 +162,7 @@ iframe {
   #main .border {
     font-size: 1.2rem;
     line-height: 2.5rem;
-    margin-top: 80px;
+    margin-top: 40px;
   }
   #main p {
     line-height: 2.1rem;
@@ -191,7 +197,6 @@ iframe {
     margin-top: -26px;
   }
   #main .small {
-    width: 450px;
     word-break: break-all;
     margin-top: -30px;
   }
